--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<head></head>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-
+    <div id = "clicker">
+        <image id = "codeToClick" src = "images/codeButton.png"></image>
+    </div>
 </body>
