--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <head>
+    <title>Coding Clicker</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
+   
     <div id = "clicker">
+        <h1 id = "totalScore">0</h1>;
         <image id = "codeToClick" src = "images/codeButton.png"></image>
     </div>
+ 
 </body>
