committing not quitting

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
         <h1 id = "totalScore">0</h1>;
         <image id = "codeToClick" src = "images/codeButton.png"></image>
     </div>
+    <div class = "autoClicking" id = "ide">
+        <image class = "autoClickerPic" src = "images/IDE.png"></image>
+        <ul>
+            <li>yo some kind of description</li>
+            <li>oh yeah buy me for sure</li>
+            <li>pick me pick me</li>
+        </ul>
+    </div>
  
 </body>
