Final commit I am so sleepy

--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
         <h1 id = "totalScore">0</h1>;
         <image id = "codeToClick" src = "images/codeButton.png"></image>
     </div>
-    <div class = "autoClicking" id = "ide">
-        <image class = "autoClickerPic" src = "images/IDE.png"></image>
-        <ul>
-            <li>yo some kind of description</li>
-            <li>oh yeah buy me for sure</li>
-            <li>pick me pick me</li>
-        </ul>
-    </div>
- 
+    <div id="allAutoClickers">
+        <div class = "autoClicking" id = "ide">
+            <image class = "autoClickerPic" src = "images/IDE.png"></image>
+            <ul>
+                <li>This will give you one line of code per second</li>
+                <li>It costs 3 lines of code to buy though</li>
+                <li>You need one of these to hire an employee</li>
+            </ul>
+        </div>
+        <div class = "autoClicking" id = "unemployed">
+            <image class = "autoClickerPic" src = "images/JoblessProgrammer.jpg"></image>
+            <ul>
+                <li>This employee will give you two lines of code per second</li>
+                <li>It cost 6 lines of code to buy</li>
+                <li>If you want to build an Ai you need at least one of these</li>
+            </ul>
+        </div>
+        <div class = "autoClicking" id = "ai">
+            <image class = "autoClickerPic" src = "images/AI.jpg"></image>
+            <ul>
+                <li>This will give you three lines of code per second</li>
+                <li>It costs 9 lines of code to buy though</li>
+                <li>ChatGPT is kind of wild</li>
+            </ul>
+        </div>
+    </div> 
 </body>
