okay this is actually the last one I think

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-   
+    <header>
+        <h1>CODING CLICKER 01010101</h1>
+    </header>   
     <div id = "clicker">
         <h1 id = "totalScore">0</h1>;
         <image id = "codeToClick" src = "images/codeButton.png"></image>
